# superintelligent-dregg

./: .gitattributes  .gitignore  .mcp.json  APPS-RETIREMENT-SWEEP.md  Cargo.toml  DFA-RATIONALIZATION-DESIGN.md  EFFECT-WIRING-COMPLETENESS-AUDIT.md  HANDOFF.md  NEW-WORLD.md  PICKLES-OUTER-LAYER-PLAN.md  PYANA_DESIGN.md  README.md  SDK-NODE-WIRE-TEST-AUDIT.md  STORAGE-AS-CELL-PROGRAMS.md  SUBSTRATE-TEST-AUDIT.md  TOPLEVEL-MD-INDEX.md  test_results.txt
app-framework/: Cargo.toml  README.md
app-framework/src/: auth.rs  authorizer.rs  batch_executor.rs  blinded_endpoint.rs  captp_server.rs  cipherclerk.rs  discovery.rs  dispute.rs  escrow.rs  fee_policy.rs  fields.rs  hex.rs  inbox_endpoint.rs  lib.rs  middleware.rs  multi_group.rs  queue_endpoint.rs  ring_trade.rs  server.rs  starbridge.rs  store.rs
app-framework/tests/: escrow_authorization.rs  integration_app_cipherclerk_lifecycle.rs
apps/amm/: Cargo.toml
apps/amm/examples/: swap_demo.rs
apps/amm/src/: circuit.rs  lib.rs  lp_token.rs  pool.rs  router.rs  server.rs  tests.rs
apps/compute-exchange/: Cargo.toml
apps/compute-exchange/src/: auction.rs  delivery_verification.rs  main.rs  orderbook.rs  persistence.rs  qualification.rs  settlement.rs  state.rs
apps/gallery/: Cargo.toml  README.md  demo.sh
apps/gallery/examples/: demo.rs  devnet_gallery.rs
apps/gallery/frontend/: app.js  auction.html  bid.js  cipherclerk.js  index.html  style.css  wallet.js
apps/gallery/src/: artwork.rs  auction.rs  bidding.rs  blinded_bids.rs  handlers.rs  lib.rs  notification_inbox.rs  private_vickrey.rs  provenance.rs  server.rs  settlement.rs  tests.rs
apps/lending/: Cargo.toml
apps/lending/examples/: lending_demo.rs
apps/lending/src/: borrow.rs  circuit.rs  interest.rs  lib.rs  liquidation.rs  supply.rs  tests.rs
apps/privacy-voting/: Cargo.toml
apps/privacy-voting/src/: ballot.rs  effects.rs  eligibility.rs  lib.rs  proposal.rs  server.rs  tally.rs  tests.rs
apps/stablecoin/: Cargo.toml
apps/stablecoin/examples/: demo.rs
apps/stablecoin/src/: cdp.rs  circuit.rs  lib.rs  liquidation.rs  oracle.rs  tests.rs
audit/: Cargo.toml  README.md
captp/: Cargo.toml  README.md
captp/src/: gc.rs  handoff.rs  lib.rs  pipeline.rs  session.rs  store_forward.rs  sturdy.rs
captp/tests/: integration.rs  integration_gc_collection.rs  integration_three_party_handoff.rs
commit/: Cargo.toml  README.md
commit/src/: accumulator.rs  fact.rs  fold.rs  hash.rs  lib.rs  merkle.rs  poseidon2_tree.rs  state.rs  typed.rs
demo/: Cargo.toml  README.md
demo/cross-app-e2e/: REAL-VERSION.md  cross_app_helper.rs  cross_app_mcp.py  run.sh  verify_real.py
demo/multi-node-devnet/: README.md  start_devnet.sh
demo/sdk-consensus/: Cargo.toml
demo/sdk-consensus/src/: main.rs
demo/src/: authority.rs  commit_state.rs  federation.rs  main.rs  revocation.rs  token.rs
demo/two-ai-handoff/: README.md  charlie.py  expected.json  run.sh  silver_helper.rs
dfa/: Cargo.toml  README.md
dfa/examples/: builder_api.rs
dfa/src/: air.rs  federation_verifier.rs  lib.rs  router.rs
dregg-dsl/: Cargo.toml  README.md
dregg-dsl-tests/: Cargo.toml  README.md
dregg-dsl-tests/src/: accumulator_dsl.rs  advanced_circuits.rs  arithmetic_predicate_dsl.rs  block_transition_dsl.rs  dispute_dsl.rs  dregg_definitions.rs  factory_dsl.rs  fold_dsl.rs  fri_verifier_dsl.rs  garbled_dsl.rs  lib.rs  native_signature_dsl.rs  note_spending_dsl.rs  poseidon2_dsl.rs  predicate_dsl.rs  presentation_dsl.rs  schnorr_dsl.rs  sovereign_transition_dsl.rs  temporal_dsl.rs  temporal_macro.rs
dregg-dsl/src/: emit_stark_impl.rs  gen_midnight.rs  ir.rs  lib.rs  parse.rs
net/: Cargo.toml  README.md
net/src/: causal.rs  gossip.rs  lib.rs  message.rs  node.rs
persist/: Cargo.toml  README.md
persist/src/: audit.rs  blocklace_store.rs  checkpoint.rs  federation.rs  keys.rs  ledger_store.rs  lib.rs  note_tree.rs  poseidon2_note_tree.rs  recovery.rs  tables.rs  tests.rs  tokens.rs
preflight/: Cargo.toml  README.md
preflight/src/: main.rs  report.rs
preflight/src/checks/: apps.rs  backends.rs  blocklace.rs  boot.rs  bridges.rs  captp.rs  cells.rs  cli.rs  composition.rs  demo_agent.rs  effect_vm.rs  federation.rs  intents.rs  mod.rs  nameservice.rs  note_bridge.rs  privacy.rs  proofs.rs  relay.rs  routing.rs  sovereign.rs  storage.rs  turns.rs  wire.rs
rbg/: Cargo.toml
rbg/src/: directory.rs  factory.rs  lib.rs  vfs.rs
starbridge-apps/identity/: Cargo.toml  README.md  manifest.json
starbridge-apps/nameservice/: Cargo.toml  manifest.json
token/: Cargo.toml
token/benches/: token_bench.rs
token/src/: biscuit_backend.rs  datalog_verify.rs  dregg_caveats.rs  factset.rs  format.rs  lib.rs  macaroon_backend.rs  pyana.rs  pyana_caveats.rs  revocation.rs  traits.rs
turn/: Cargo.toml  README.md
turn/src/: action.rs  aggregate_bilateral_prover.rs  bilateral_schedule.rs  binding_proof.rs  budget_gate.rs  builder.rs  composer.rs  conditional.rs  conflict.rs  economics.rs  encrypted.rs  error.rs  escrow.rs  eventual.rs  execution_path.rs  executor.rs  fast_path.rs  journal.rs  lib.rs  obligation.rs  pending.rs  presence_discharge.rs  queue_programs.rs  tests.rs  turn.rs  verify.rs  witnessed_receipt.rs
turn/tests/: integration_archive_head_binding.rs  integration_attenuate_capability.rs  integration_burn_receipt.rs  integration_captp_variant_binding.rs  integration_executor_signature_v3.rs  integration_lifecycle.rs  integration_proof_carrying_receipt_fields.rs  integration_vk_integrity.rs  proptest_invariants.rs  witnessed_predicate_dispatch.rs
verifier/: Cargo.toml  README.md
verifier/src/: aggregated_bundle.rs  bilateral_pair.rs  cross_fed.rs  lib.rs  main.rs
verifier/tests/: bilateral_pair_demo.rs  integration.rs  integration_forged_proofs.rs  integration_replay_chain.rs
wire/: Cargo.toml  README.md
wire/benches/: wire_bench.rs
wire/src/: captp_routing.rs  dfa_router.rs  federation_bridge.rs  hardening.rs  lib.rs  message.rs  server.rs
wire/tests/: adversarial_wire_tests.rs  captp_delivery_tests.rs  integration_gossip_attested_root.rs
(+1032 files in other folders)
