[package]
name = "dregg-app-framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Production application framework for dregg apps — server infra, admin auth, persistence, proof middleware, content stores, escrow lifecycle"

[dependencies]
dregg-sdk = { path = "../sdk" }
dregg-turn = { path = "../turn" }
dregg-intent = { path = "../intent" }
dregg-circuit = { path = "../circuit" }
dregg-cell = { path = "../cell" }
dregg-types = { path = "../types" }
dregg-storage = { path = "../storage" }
dregg-captp = { path = "../captp" }

axum = "0.8"
http = "1"
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
thiserror = { workspace = true }
base64 = { workspace = true }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tower = "0.5"

[features]
default = []
dev = ["dregg-sdk/dev"]

[lints]
workspace = true
