[package]
name = "dregg-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audit helper crate for commitment and evidence utilities used by dregg audits"
readme = "README.md"

[dependencies]
dregg-commit = { path = "../commit" }
blake3 = "1"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
