[package]
name = "dregg-captp"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
getrandom = { workspace = true }
bs58 = "0.5"
postcard = { version = "1", features = ["use-std"] }
dregg-types = { path = "../types" }
dregg-cell = { path = "../cell" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
