[package]
name = "dregg-commit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Canonical commitment and Merkle helpers for dregg state, capability, and proof inputs"
readme = "README.md"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
dregg-circuit = { path = "../circuit" }
dregg-dsl-runtime = { path = "../dregg-dsl-runtime" }

[lints]
workspace = true
