[package]
name = "dregg-dsl-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compile-time and runtime conformance tests for dregg DSL generated code"
readme = "README.md"

[dependencies]
blake3 = "1"
dregg-dsl = { path = "../dregg-dsl" }
dregg-dsl-runtime = { path = "../dregg-dsl-runtime" }
dregg-circuit = { path = "../circuit" }

[lints]
workspace = true
