[package]
name = "dregg-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macro DSL for declaring dregg caveats, effects, and constraint surfaces"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
