[package]
name = "dregg-persist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistent storage backend for dregg token chains, federation state, and audit logs"

[features]
default = ["audit-bridge"]
audit-bridge = ["dregg-audit"]

[dependencies]
redb = "2"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
getrandom = { workspace = true }
chacha20poly1305 = { workspace = true }
subtle = "2"
dregg-types = { path = "../types" }
dregg-commit = { path = "../commit" }
dregg-cell = { path = "../cell" }
dregg-circuit = { path = "../circuit" }
dregg-blocklace = { path = "../blocklace" }
dregg-federation = { path = "../federation" }
dregg-audit = { path = "../audit", optional = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "dregg_persist"
crate-type = ["rlib"]

[lints]
workspace = true
