[package]
name = "dregg-preflight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Golden Master Preflight: end-to-end integration test gate for devnet -> testnet -> mainnet promotion"

[[bin]]
name = "dregg-preflight"
path = "src/main.rs"

[dependencies]
dregg-sdk = { path = "../sdk" }
dregg-circuit = { path = "../circuit" }
dregg-turn = { path = "../turn" }
dregg-cell = { path = "../cell" }
dregg-intent = { path = "../intent" }
dregg-commit = { path = "../commit" }
dregg-federation = { path = "../federation" }
dregg-bridge = { path = "../bridge" }
dregg-types = { path = "../types" }
dregg-blocklace = { path = "../blocklace" }
dregg-captp = { path = "../captp" }
dregg-wire = { path = "../wire" }
dregg-storage = { path = "../storage" }
dregg-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
serde_json = "1"
toml = "0.8"

# App crates — exercised by preflight app integration checks.
#
# apps/gallery and apps/identity were both retired in the apps/ → starbridge-apps/
# migration (STARBRIDGE-APPS-PLAN.md §4.1). Their starbridge-apps equivalents
# (starbridge-identity, etc.) use a different public API; the preflight checks
# that exercised them are retired in preflight/src/checks/apps.rs.
#
# When a starbridge-apps integration check is added, add the dep here:
#   starbridge-identity = { path = "../starbridge-apps/identity", optional = true }

blake3 = "1"
curve25519-dalek = { version = "4", features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["std"] }
getrandom = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
tokio = { version = "1", features = ["full"] }

[features]
default = []

[lints]
workspace = true
