[package]
name = "pyana-rbg"
version.workspace = true
edition.workspace = true
description = "Robigalia-inspired directory / scoped-intent / VFS userspace primitives for pyana's capability-secure distributed runtime"

[dependencies]
blake3 = "1"
pyana-types = { workspace = true }
pyana-cell = { path = "../cell", default-features = false }

[lints]
workspace = true
