[package]
name = "dregg-token"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
biscuit = ["biscuit-auth"]
macaroon = ["dep:dregg-macaroon", "dregg-macaroon/crypto"]
default = ["biscuit", "macaroon", "rand-deps"]
rand-deps = ["dep:getrandom", "dep:rand", "dep:scalable_cuckoo_filter", "dep:base64", "dep:ed25519-dalek"]
zkvm = ["dep:dregg-macaroon", "dregg-macaroon/zkvm"]

[dependencies]
base64 = { workspace = true, optional = true }
biscuit-auth = { version = "6.0.0", optional = true }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"], optional = true }
dregg-macaroon = { workspace = true, optional = true }
dregg-trace = { path = "../trace" }
dregg-commit = { path = "../commit" }
getrandom = { workspace = true, optional = true }
globset = { workspace = true }
rand = { version = "0.9", optional = true }
rmp-serde = { workspace = true }
scalable_cuckoo_filter = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
getrandom = { workspace = true }

[lib]
name = "dregg_token"
crate-type = ["lib"]

[[bench]]
name = "token_bench"
harness = false

[lints]
workspace = true
