[package]
name = "pyana-turn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Call-forest transaction model for atomic agent execution turns"

[dependencies]
pyana-cell = { path = "../cell" }
pyana-circuit = { path = "../circuit" }
pyana-commit = { path = "../commit" }
pyana-dsl-runtime = { path = "../pyana-dsl-runtime" }
pyana-types = { path = "../types" }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["hazmat"] }
hex = "0.4"
postcard = { version = "1", features = ["alloc"] }
serde = { workspace = true }

[dev-dependencies]
curve25519-dalek = { version = "4", features = ["alloc"] }
pyana-captp = { path = "../captp" }
proptest = { workspace = true }

[features]
# Stage 1 (D) shim feature: emit tagged `Effect::Custom` for runtime variants
# without AIR coverage (escrow, bridge, delegation, etc.). Production builds
# should leave this off — the verifier rejects any turn containing pending
# variants until Stages 3–6 land per-variant AIRs.
effect-vm-pending-shim = []

[lints]
workspace = true
