[package]
name = "dregg-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Standalone Effect VM proof verifier — no shared state with the prover"

[[bin]]
name = "dregg-verifier"
path = "src/main.rs"

[dependencies]
dregg-circuit = { path = "../circuit" }
dregg-types = { path = "../types" }
dregg-commit = { path = "../commit" }
# Federation primitives (cross-fed bundle, FederationReceipt verify path).
# `default-features = false` so we do NOT pull tokio / crossbeam-channel — the
# verifier binary stays a non-async, no-runtime, ledger-free process.
dregg-federation = { path = "../federation", default-features = false }
dregg-turn = { path = "../turn" }
dregg-captp = { path = "../captp" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"
blake3 = "1"
postcard = { version = "1", features = ["alloc"] }

[dev-dependencies]
dregg-circuit = { path = "../circuit" }
dregg-cell = { path = "../cell" }
tempfile = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"

[lints]
workspace = true
