[package]
name = "dregg-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Dregg wire protocol framing, network server/client behavior, and cross-node verification demos"
readme = "README.md"

[features]
default = ["stark-verifier", "bridge"]
stark-verifier = ["dregg-circuit"]
bridge = ["dregg-bridge", "dregg-commit", "stark-verifier"]
dev = []

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26" }
rustls-pemfile = { version = "2" }
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
tracing = { workspace = true }
getrandom = { workspace = true }
dregg-circuit = { path = "../circuit", optional = true }
dregg-dsl-runtime = { path = "../dregg-dsl-runtime" }
dregg-bridge = { path = "../bridge", optional = true, features = ["test-utils"] }
dregg-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
dregg-commit = { path = "../commit", optional = true }
dregg-captp = { path = "../captp" }
dregg-cell = { path = "../cell" }
dregg-federation = { path = "../federation", default-features = false }
dregg-persist = { path = "../persist" }
dregg-turn = { path = "../turn" }
dregg-types = { path = "../types" }
dregg-dfa = { path = "../dfa" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "dregg-network-demo"
path = "src/bin/demo.rs"
required-features = ["stark-verifier"]

[[bin]]
name = "cross_node_auth"
path = "src/bin/cross_node_auth.rs"
required-features = ["bridge"]

[[bench]]
name = "wire_bench"
harness = false

[lints]
workspace = true
