[package]
name = "compute-exchange"
version = "0.1.0"
edition = "2024"

[dependencies]
pyana-app-framework = { path = "../../app-framework" }
pyana-turn = { path = "../../turn" }
pyana-intent = { path = "../../intent" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
blake3 = "1"

[lints]
workspace = true
