[package]
name = "dregg-gallery"
version = "0.1.0"
edition = "2024"
description = "Federated art gallery with commit-reveal auctions on the dregg protocol"

[dependencies]
dregg-app-framework = { path = "../../app-framework" }
dregg-cell = { path = "../../cell", default-features = false, features = ["crypto"] }
dregg-circuit = { path = "../../circuit", default-features = false }
dregg-dsl-runtime = { path = "../../dregg-dsl-runtime" }
dregg-federation = { path = "../../federation" }
dregg-turn = { path = "../../turn" }
# dregg-sdk not needed directly: DreggEngine and CellId are re-exported via dregg-app-framework

serde = { workspace = true }
serde_json = { workspace = true }
postcard = { version = "1", features = ["use-std"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
blake3 = "1"
getrandom = { workspace = true }
curve25519-dalek = { version = "4", features = ["alloc"] }
chacha20poly1305 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tower = { version = "0.5" }

[[bin]]
name = "dregg-gallery"
path = "src/bin/dregg_gallery.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "devnet_gallery"
path = "examples/devnet_gallery.rs"

[lints]
workspace = true
