[package]
name = "pyana-lending"
version = "0.1.0"
edition = "2024"

[dependencies]
pyana-circuit = { path = "../../circuit", default-features = false, features = ["mock"] }
pyana-types = { path = "../../types" }

serde = { workspace = true }
serde_json = { workspace = true }
blake3 = "1"

[[example]]
name = "lending_demo"
path = "examples/lending_demo.rs"

[lints]
workspace = true
