[package]
name = "dregg-privacy-voting"
version = "0.1.0"
edition = "2024"

[dependencies]
dregg-app-framework = { path = "../../app-framework" }
dregg-storage = { path = "../../storage" }
dregg-sdk = { path = "../../sdk" }
dregg-types = { path = "../../types" }
dregg-turn = { path = "../../turn" }
dregg-cell = { path = "../../cell", default-features = false }
dregg-token = { path = "../../token" }

serde = { workspace = true }
serde_json = { workspace = true }
blake3 = "1"
ed25519-dalek = { version = "2", features = ["std"] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = "0.8"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"

[[bin]]
name = "dregg-privacy-voting"
path = "src/bin/dregg_privacy_voting.rs"

[lints]
workspace = true
