[package]
name = "starbridge-identity"
version = "0.1.0"
edition = "2024"
description = "Starbridge userspace identity app — composes dregg-credentials for issuance, presentation, and verification of verifiable credentials."

# Greenfield identity app composed on top of `dregg-credentials` (G31).
# The original `apps/identity/` invented `Credential { ..., /* no signature */ }`
# and 'verified: bool' as the verification surface — both correctly called
# out as P0s in the apps audit. This starbridge-app uses the
# `dregg-credentials` primitive (which wraps `bridge::present` correctly)
# and exposes turn-builders for the credential lifecycle without
# inventing new effect variants.

[dependencies]
dregg-credentials = { path = "../../credentials" }
dregg-app-framework = { path = "../../app-framework" }
dregg-cell = { path = "../../cell", default-features = false }
dregg-circuit = { path = "../../circuit", default-features = false }
dregg-types = { path = "../../types" }
dregg-token = { path = "../../token", default-features = false, features = ["macaroon", "rand-deps"] }

blake3 = "1"
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
